Tue Oct 30 02:20:10 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* thread.c: added Thread#thread_variable_(get|set),
	  Thread#thread_variable?, and Thread#thread_variables for operating
	  on variables that are local to threads. [ruby-core:47790]

	* vm.c: ditto

	* test/ruby/test_thread.rb: tests for thread variables.

Mon Oct 29 18:22:58 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_close): close separatedly per each
	  instances, as well as IO.

Mon Oct 29 10:22:00 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/handlers/recorder.rb: added a class for
	  recording YAML parse and emit events.

	* ext/psych/lib/psych/handler.rb: adding a list of events so that
	  handler classes can more easily be meta-programmed.

	* test/psych/handlers/test_recorder.rb: tests for the change.

Mon Oct 29 05:48:52 2012  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/ostruct.rb: Add [] and []=, base on a patch by Thomas Sawyer.
	  Also accept {Open}Struct as argument to new.
	  Add #eql?, #hash & #each_pair
	  Protect new_ostruct_member

Mon Oct 29 03:20:58 2012  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb: Fix determinant_e [ruby-dev:46305] [Bug #7228]

Sun Oct 28 23:52:25 2012  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_document.rb: Add tests for parsing XML encoded
	  by UTF-8 with BOM.

Sun Oct 28 23:47:09 2012  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/source.rb: Move encoding detection code to base class.
	* lib/rexml/encoding.rb: Remove needless encoding detection code.

Sun Oct 28 21:40:13 2012  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/parsers/baseparser.rb: Fix a bug that UTF-8 is used
	  for UTF-16XX encoded XML that doesn't have encoding="UTF-16" in
	  XML declration.
	* test/rexml/test_document.rb: Add tests for the above change.

Sun Oct 28 21:37:34 2012  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_document.rb: Group tests that they parse